--- a/components/Input/Input.css
+++ b/components/Input/Input.css
@@ -7,7 +7,10 @@
 }
 
 .inputDiv{
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    box-sizing: border-box;
 }
 
 .input{
