--- a/components/Switch/Switch.css
+++ b/components/Switch/Switch.css
@@ -17,7 +17,7 @@
   /* font-size: 13px; */
   font-size: .92857142857rem;
   cursor: pointer;
-  flex-basis: 120px;
+  flex-basis: 150px;
   vertical-align: 13px;
 }
 
