--- a/components/TextArea/TextArea.css
+++ b/components/TextArea/TextArea.css
@@ -6,7 +6,10 @@
 }
 
 .textAreaDiv{
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    box-sizing: border-box;
 }
 
 .textarea{
